--- a/JC_1_5/Pages/PanoPropuestas.xaml
+++ b/JC_1_5/Pages/PanoPropuestas.xaml
@@ -56,7 +56,7 @@
                     
                     </Grid>
 
-                    <phone:WebBrowser Height="Auto" Width="400" Margin="0,0,0,0"  IsScriptEnabled="True" IsHitTestVisible="False" x:Name="browContenido" Loaded="browContenido_Loaded" ScriptNotify="browContenido_ScriptNotify" />
+                    <phone:WebBrowser Height="Auto" Width="400" Margin="10,10,5,0"  IsScriptEnabled="True" IsHitTestVisible="False" x:Name="browContenido" Loaded="browContenido_Loaded" ScriptNotify="browContenido_ScriptNotify" />
                     
 
                     <Grid>
@@ -98,7 +98,7 @@
 
                         <Grid Grid.Row="1" x:Name="grdPregunta" Visibility="Collapsed" Background="#F2F2F2" Margin="20,10,20,10">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="50" />
+                                <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
@@ -142,7 +142,8 @@
                                 </Grid.RowDefinitions>
 
                                 <TextBlock Grid.Row="0"  Visibility="Collapsed" Name="txtPreguntaVis" Foreground="Black"  Text=""  TextAlignment="Center" TextWrapping="Wrap" FontFamily="/Assets/NattanFonts/Roboto_Slab/RobotoSlab-Bold.ttf #Roboto Slab" Margin="5,5,5,10"/>
-                                <amCharts:PieChart Grid.Row="1" Margin="10,10,10,10" FlowDirection="LeftToRight" LegendVisibility="Visible" Visibility="Collapsed"  Width="300" Height="300"  x:Name="chrtPie" TitleMemberPath="Title" ValueMemberPath="Value" VerticalContentAlignment="Bottom" >
+                                <amCharts:PieChart LegendVisibility="Visible"  Foreground="Black" CharacterSpacing="1" Grid.Row="1" Margin="10,10,10,10" FlowDirection="RightToLeft"  Visibility="Collapsed"  x:Name="chrtPie" TitleMemberPath="Title" ValueMemberPath="Value" Width="280" Height="430" >
+                                    
                                     <amCharts:PieChart.Brushes>
                                         <SolidColorBrush Color="#4A8293" />
                                         <SolidColorBrush Color="#189A8E"/>
