--- a/JC_1_5/Pages/AddTestimonio.xaml
+++ b/JC_1_5/Pages/AddTestimonio.xaml
@@ -140,7 +140,7 @@
                     <TextBlock Foreground="#565656" Margin="10,0,0,0" Grid.Row="10" HorizontalAlignment="Left"  Name="blckCategoria" Text="Categoria" VerticalAlignment="Top"  FontWeight="Normal"  FontSize="24" />
                     <TextBox Grid.Row="11" HorizontalAlignment="Left" Name="txtCategoria" Text="" VerticalAlignment="Top" Width="422" IsReadOnly="True" />
 
-                    <TextBlock Foreground="#565656" Margin="10,0,0,0" Grid.Row="12" HorizontalAlignment="Left"  Name="blckEntidad" Text="Entidad" VerticalAlignment="Top" FontWeight="Normal" FontSize="24" />
+                    <TextBlock Foreground="#565656" Margin="10,0,0,0" Grid.Row="12" HorizontalAlignment="Left"  Name="blckEntidad" Text="Entidad (Obligatorio)" VerticalAlignment="Top" FontWeight="Normal" FontSize="24" />
 
                     <ListBox Foreground="#565656" Margin="10,0,0,0" Grid.Row="13" HorizontalAlignment="Left" Name="lstEntidad" VerticalAlignment="Top" Width="422" >
 
@@ -178,7 +178,7 @@
                         <ListBoxItem   x:Uid="32">Zacatecas</ListBoxItem>
                     </ListBox>
 
-                    <TextBlock Foreground="#565656" Margin="10,0,0,0" Grid.Row="14" HorizontalAlignment="Left"  Name="blckExplicacion" Text="Explicacion" VerticalAlignment="Top"  FontWeight="Normal" FontSize="24" />
+                    <TextBlock Foreground="#565656" Margin="10,0,0,0" Grid.Row="14" HorizontalAlignment="Left"  Name="blckExplicacion" Text="Explicación (Obligatorio)" VerticalAlignment="Top"  FontWeight="Normal" FontSize="24" />
                     <TextBox Foreground="#565656" Margin="10,0,0,0" Grid.Row="15" HorizontalAlignment="Left" Name="txtExplicacion"  Width="422" AcceptsReturn="True" MaxHeight="300" TextWrapping="Wrap" />
                     <Button  Grid.Row="16" Width="200" Height="70" FontFamily="/Assets/NattanFonts/Roboto_Slab/RobotoSlab-Regular.ttf#Roboto Slab" BorderBrush="#6CDA84" Background="#6CDA84"  x:Name="btnGuardar" Click="btnGuardar_Click">Guardar</Button>
                 </Grid>
